Fix missing space in dropdown mixin

--- a/src/styles/mixins/dropdown.scss
+++ b/src/styles/mixins/dropdown.scss
@@ -3,6 +3,7 @@
   position: absolute;
   top: 0;
   z-index: $elevation-menu;
+  margin: 24px 0;
   background-color: $color-white;
   transform: scale(0);
   transform-origin: top left;
